--- a/shopnexus.client/src/css/header-footer.css
+++ b/shopnexus.client/src/css/header-footer.css
@@ -1,9 +1,10 @@
 @charset "utf-8";
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 /* css file for header, footer, and main elements */
 
 :root {
-    --app-header-height: 0;
-    --app-footer-height: 0;
+    --app-header-height: 90px;
+    --app-footer-height: 25rem;
 }
 
 #root {
@@ -14,16 +15,304 @@
     min-height: 100vh;
 }
 
+/*-----------------------------------------*/
+/*----------------HEADER-------------------*/
+/*-----------------------------------------*/
+
 header {
     height: var(--app-header-height);
+    background-color: #fff;
+    display: flex;
+    /*border-bottom: solid;*/
+    padding: 0 4em;
+}
+
+    header h1 {
+        font-family: "Permanent Marker", sans-serif;
+        color: #000;
+        font-size: 2.5em;
+        line-height: 85px;
+        width: 20%;
+        padding-left: 20px;
+        span
+
+{
+    color: #ffff00;
+}
+
+}
+
+header nav {
+    display: grid;
+    place-items: center;
+    width: 30%;
+    ul
+
+{
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 2em;
+    li
+
+{
+    font-family: "Rubik", sans-serif;
+    font-size: 17px;
+    cursor: pointer;
+    padding: 9px;
+    &:hover
+
+{
+    background-color: #000;
+    color: #fff;
+}
+
+}
+}
+}
+
+header .search-product {
+    width: 30%;
+    display: grid;
+    place-items: center;
+    input, .input-wrapper
+
+{
+    border-radius: 2em;
+}
+
+input {
+    width: 100%;
+    height: 100%;
+    padding: 0 1.7em;
+    background-color: #ebdcdc;
+    &::placeholder
+
+{
+    user-select: none;
+}
+
+}
+
+.input-wrapper {
+    width: 90%;
+    height: 40px;
+    position: relative;
+    font-family: "Rubik", sans-serif;
+}
+
+.magnifier-icon {
+    position: absolute;
+    right: 21px;
+    top: 11px;
+}
+
+}
+
+header .access-btns {
+    width: 12%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    span
+
+{
+    font-family: "Rubik", sans-serif;
+    cursor: pointer;
+    font-size: 17px;
+    user-select: none;
+    svg
+
+{
+    margin-right: 0.5em;
+}
+
+}
+
+.btns-modal {
+    position: absolute;
+    bottom: -10em;
+    width: 10em;
+    height: 10em;
+    border-radius: 10px;
+    background-color: #ece8e0e1;
+    display: none;
+}
+
+.btns-wrapper {
+    display: grid;
+    place-items: center;
+    height: 100%;
+    position: relative;
+    span
+
+{
+    position: absolute;
+    height: 30px;
+    width: 30px;
+    background-color: #ece8e0e1;
+    transform: rotate(45deg);
+    top: -10px;
+    z-index: 1;
+}
+
+}
+
+.btn {
+    width: 7em;
+    height: 3em;
+    font-family: "Rubik", sans-serif;
+    cursor: pointer;
+    user-select: none;
+    border-radius: 1em;
+    font-size: 15px;
+    z-index: 2;
+}
+
+.login-btn {
+    background-color: #ffff00;
+    font-weight: 700;
+}
+
+.signup-btn {
+    background-color: #000;
+    color: #ffff00;
+    font-weight: 700;
+}
+
+}
+
+header .cart-section {
+    display: grid;
+    place-items: center;
+    width: 8%;
+    span
+
+{
+    display: flex;
+    align-items: center;
+    font-family: "Rubik", sans-serif;
+    cursor: pointer;
+    font-size: 17px;
+    svg
+
+{
+    margin-right: 0.5em;
+    font-size: 22px;
+}
+
+}
 }
 
 footer {
     height: var(--app-footer-height);
     /* Pushes the footer all the way down to the bottom of the page when the screen is taller than the page */
     margin-top: auto;
+    background-color: #000;
+    width: 100%;
 }
 
-main {
+.flexbox {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    color: #fff;
+}
 
+.footer-contactus, .footer-options-list {
+    height: 100%;
+}
+
+.footer-options-list {
+    width: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8em;
+    div
+
+{
+    display: flex;
+    flex-direction: column;
+    h2
+
+{
+    padding-bottom: 5px;
+    border-bottom: solid 1px #fff;
+    font-size: 2.5em;
+    width: 6em;
+}
+
+ul {
+    list-style: none;
+    margin-top: 2em;
+}
+
+li {
+    font-family: "Rubik", sans-serif;
+    font-size: 13px;
+    cursor: pointer;
+    & + &
+
+{
+    margin-top: 1.5em;
+}
+
+&:hover {
+    color: #ffff00;
+}
+
+}
+}
+}
+
+.footer-contactus {
+    width: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    h2
+
+{
+    font-family: "Permanent Marker", sans-serif;
+    text-align: left;
+    width: 15em;
+    font-size: 20px;
+}
+
+p {
+    margin-top: 1.5em;
+    font-family: "Rubik", sans-serif;
+    width: 23em;
+    text-align: left;
+    font-size: 13px;
+}
+
+.subscription-section {
+    display: flex;
+    width: 97%;
+    margin-top: 2em;
+    input
+
+{
+    height: 2.5em;
+    border-radius: 2em;
+    padding: 0 2em;
+    font-family: "Rubik", sans-serif;
+    color: #000;
+}
+
+button {
+    width: 5em;
+    height: 2.5em;
+    border-radius: 2em;
+    margin-left: 1em;
+    background-color: #ffff00;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+}
 }
