--- a/shopnexus.client/src/css/header-footer.css
+++ b/shopnexus.client/src/css/header-footer.css
@@ -30,10 +30,12 @@ header {
 header h1 {
     font-family: "Permanent Marker", sans-serif;
     color: #000;
-    font-size: 2.5em;
+    font-size: 3.7em;
     line-height: 85px;
     width: 20%;
     padding-left: 20px;
+    cursor: default;
+    user-select: none;
 
     span {color: #ffff00;}
 }
