--- a/shopnexus.client/src/css/home.css
+++ b/shopnexus.client/src/css/home.css
@@ -2,8 +2,12 @@
     height: 600px;
     background-size: cover;
     padding: 10px 0;
-    text-align: center;
     background-color: #ffff00;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .hero h1, p {
@@ -40,10 +44,21 @@ h2 {
 }
 
 .product-card {
-    height: 120px;
+    height: 220px;
+    width: 150px;
     border: 1px solid #ccc;
-    padding: 15px 5px 5px 5px;
+    padding: 10px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.product-card img {
+    max-width: 100%;
+    max-height: 100px;
+    object-fit: cover;
 }
 
 .product-card button {
