--- a/shopnexus.client/src/css/home.css
+++ b/shopnexus.client/src/css/home.css
@@ -1,24 +1,71 @@
 .hero {
-    background: url('path/to/hero.jpg') no-repeat center center;
+    height: 600px;
     background-size: cover;
-    padding: 5em 0;
+    padding: 10px 0;
+    background-color: #ffff00;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
-    color: white;
+}
+
+.hero h1, p {
+    display: flex;
+    justify-content: center;
+}
+
+h1 {
+    font-size: 30px;
+    font-weight: 600;
+}
+
+p {
+    font-size: 15px;
+    font-weight: 500;
+}
+
+h2 {
+    font-size: 20px;
+    font-weight: 600;
 }
 
 .featured-products {
-    padding: 2em;
+    margin: 20px 0;
+    padding: 10px;
     text-align: center;
 }
 
 .product-list {
+    margin-top: 15px;
     display: flex;
     justify-content: center;
-    gap: 1em;
+    gap: 1rem;
 }
 
 .product-card {
+    height: 220px;
+    width: 150px;
     border: 1px solid #ccc;
-    padding: 1em;
+    padding: 10px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.product-card img {
+    max-width: 100%;
+    max-height: 100px;
+    object-fit: cover;
+}
+
+.product-card button {
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.product-card button:hover {
+    cursor: pointer;
 }
