--- a/shopnexus.client/src/css/home.css
+++ b/shopnexus.client/src/css/home.css
@@ -1,18 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
+
 .hero {
     height: 600px;
-    background-size: cover;
+    background: url("../img/hero-banner-image.jpg") no-repeat center center / cover;
+}
+
+.background-dark-filter {
     padding: 10px 0;
-    background-color: #ffff00;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    height: 100%;
+    width: 100%;
 }
 
 .hero h1, p {
     display: flex;
     justify-content: center;
+    color: #fff;
 }
 
 h1 {
@@ -68,4 +76,88 @@ h2 {
 
 .product-card button:hover {
     cursor: pointer;
+}
+
+.show-all-products-btn {
+    margin-top: 2.5em;
+    width: 13em;
+    height: 3em;
+    border-radius: 2em;
+    cursor: pointer;
+    user-select: none;
+    background-color: #000;
+    color: #ffff00;
+    font-weight: 700;
+}
+
+.catalog-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    .catalog-content
+
+{
+    background-color: #fff;
+    width: 85%;
+    height: 90%;
+    border-radius: 1em;
+    display: grid;
+    place-items: center;
+    overflow: hidden;
+    position: relative;
+    h2
+
+{
+    font-family: "Permanent Marker", sans-serif;
+    font-size: 40px;
+    margin: 0.5em 0;
+}
+
+}
+
+.close-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    font-size: 5em;
+    cursor: pointer;
+}
+
+.catalog {
+        display: grid;
+        place-items: center;
+        grid-template-columns: repeat(3, 33.3%);
+        overflow-y: scroll;
+        overflow-x: hidden;
+        width: 90%;
+        height: 90%;
+
+        &::-webkit-scrollbar {
+        width: 7px;
+        height: 12px;
+        }
+
+        &::-webkit-scrollbar-track {
+            background: transparent;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: #000;
+            border-radius: 10px;
+        }
+
+        &::-webkit-scrollbar-thumb:hover {
+            background-color: #ffff00;
+        }
+
+        .product-card {
+            margin: 1em 0;
+        }
+
+    }
 }
