--- a/shopnexus.client/src/css/product.css
+++ b/shopnexus.client/src/css/product.css
@@ -91,19 +91,19 @@ body {
 
 .product-details {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     margin: 5em 0;
 }
 
 .product-images {
     position: relative;
-    width: 400px;
-    margin-right: 30px;
+    width: 500px;
+    margin-right: 40px;
 }
 
 .main-image {
     width: 100%;
-    border-radius: 50px;
+    border-radius: 20px;
 }
 
 .arrow {
