--- a/shopnexus.client/src/css/home.css
+++ b/shopnexus.client/src/css/home.css
@@ -31,6 +31,8 @@ h1 {
 p {
     font-size: 15px;
     font-weight: 500;
+    color: #000;
+    margin: 10px 0;
 }
 
 h2 {
@@ -52,7 +54,7 @@ h2 {
 }
 
 .product-card {
-    height: 300px;
+    height: 329px;
     width: 300px;
     border: 1px solid #ccc;
     padding: 10px;
