Create a category page draft that needs some clean up

--- a/shopnexus.client/src/css/app.css
+++ b/shopnexus.client/src/css/app.css
@@ -1,2 +1,10 @@
 @charset "utf-8";
 @import url(./header-footer.css);
+
+.category-page h2 {
+    margin-top: 10px;
+}
+
+.category-page > *:last-child {
+    margin-bottom: 20px;
+}
