--- a/shopnexus.client/src/css/home.css
+++ b/shopnexus.client/src/css/home.css
@@ -50,13 +50,14 @@ h2 {
     margin-top: 15px;
     display: flex;
     justify-content: center;
-    gap: 1rem;
+    gap: 3.2rem;
 }
 
 .product-card {
     height: 329px;
     width: 300px;
     border: 1px solid #ccc;
+    border-radius: 10px;
     padding: 10px;
     text-align: center;
     display: flex;
