--- a/shopnexus.client/src/css/home.css
+++ b/shopnexus.client/src/css/home.css
@@ -17,7 +17,7 @@
     width: 100%;
 }
 
-.hero h1, p {
+.hero h1, .hero p {
     display: flex;
     justify-content: center;
     color: #fff;
@@ -31,7 +31,6 @@ h1 {
 p {
     font-size: 15px;
     font-weight: 500;
-    color: #000;
     margin: 10px 0;
 }
 
