--- a/shopnexus.client/src/css/home.css
+++ b/shopnexus.client/src/css/home.css
@@ -37,6 +37,8 @@ p {
 h2 {
     font-size: 20px;
     font-weight: 600;
+    font-family: "Permanent Marker", sans-serif;
+    font-size: 40px;
 }
 
 .featured-products {
